syntax = "proto3";

package files.app;

option go_package = "postique.file.v1;pb";

service App {
    rpc CreateApp (CreateAppRequest) returns (CreateAppResponse);
}

message CreateAppRequest {
    string name = 1;
    string bucket = 2;
}

message CreateAppResponse {
    string token = 1;
}
